// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot 1`] = `
<div>
  <div
    class="ChannelsList"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Management
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="group_constrained"
                        name="group_constrained"
                        type="checkbox"
                      />
                      Group Sync
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="exclude_group_constrained"
                        name="exclude_group_constrained"
                        type="checkbox"
                      />
                      Manual Invites
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="access_control_policy_enforced"
                        name="access_control_policy_enforced"
                        type="checkbox"
                      />
                      Attribute Based
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1.5;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        >
          Management
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 40px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/123"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 1 of 1
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with paging 1`] = `
<div>
  <div
    class="ChannelsList"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-4-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-4-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-4-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Management
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="group_constrained"
                        name="group_constrained"
                        type="checkbox"
                      />
                      Group Sync
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="exclude_group_constrained"
                        name="exclude_group_constrained"
                        type="checkbox"
                      />
                      Manual Invites
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="access_control_policy_enforced"
                        name="access_control_policy_enforced"
                        type="checkbox"
                      />
                      Attribute Based
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1.5;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        >
          Management
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 400px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN0
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id0"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN1
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id1"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN2
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id2"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN3
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id3"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN4
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id4"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN5
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id5"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN6
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id6"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN7
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id7"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN8
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id8"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN9
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/id9"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 10 of 30
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next "
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with shared channel 1`] = `
<div>
  <div
    class="ChannelsList"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Management
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="group_constrained"
                        name="group_constrained"
                        type="checkbox"
                      />
                      Group Sync
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="exclude_group_constrained"
                        name="exclude_group_constrained"
                        type="checkbox"
                      />
                      Manual Invites
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="access_control_policy_enforced"
                        name="access_control_policy_enforced"
                        type="checkbox"
                      />
                      Attribute Based
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1.5;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        >
          Management
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 40px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M20,12.5c-0.3,0.4-1.7,1.2-4,1.6c0-0.7,0-1.4,0-2.1c0-0.5,0-0.9,0-1.3c1.2-0.2,2.4-0.5,3.3-0.9c0.1-0.1,0.3-0.1,0.4-0.2c0.2,0.7,0.3,1.6,0.3,2.4C20,12.2,20,12.3,20,12.5L20,12.5z
	 M10.5,16.4c0.5,0,1,0.1,1.5,0.1s1,0,1.5-0.1c-0.5,2-1.1,3.2-1.5,3.5C11.6,19.6,10.9,18.4,10.5,16.4z M12,14.5c-0.7,0-1.3,0-1.9-0.1
	c0-0.7-0.1-1.5-0.1-2.4c0-0.4,0-0.7,0-1.1c0.7,0.1,1.3,0.1,2,0.1s1.3,0,2-0.1c0,0.4,0,0.7,0,1.1c0,0.9-0.1,1.7-0.1,2.4
	C13.3,14.5,12.7,14.5,12,14.5z M13.8,8.9C13.2,9,12.6,9,12,9s-1.2,0-1.8-0.1C10.6,6.1,11.5,4.4,12,4C12.5,4.4,13.4,6.1,13.8,8.9z
	 M18.8,7.8c-0.7,0.3-1.7,0.7-3,0.9c-0.2-1.6-0.6-3.1-1.1-4.2C16.4,5.1,17.8,6.2,18.8,7.8z M5.2,7.8c1-1.5,2.4-2.7,4.2-3.3
	C8.9,5.6,8.5,7,8.2,8.7C6.9,8.4,5.9,8.1,5.2,7.8L5.2,7.8z M4.4,9.6c0.1,0.1,0.2,0.1,0.4,0.2c0.9,0.4,2,0.7,3.3,0.9
	C8,11.1,8,11.5,8,12c0,0.7,0,1.4,0.1,2.1c-2.3-0.4-3.7-1.2-4-1.6l0,0c0-0.2,0-0.3,0-0.5C4,11.2,4.1,10.3,4.4,9.6z M4.7,15.2
	c1,0.4,2.3,0.8,3.7,1c0.2,1.3,0.6,2.4,1,3.3C7.3,18.8,5.6,17.2,4.7,15.2z M19.3,15.2c-0.9,2-2.6,3.6-4.7,4.3c0.4-0.9,0.8-2,1-3.3
	C17,16,18.3,15.7,19.3,15.2L19.3,15.2z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                DN
              </span>
              <i
                class="channel-icon icon-circle-multiple-outline"
                data-testid="SharedChannelIcon"
              />
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/123"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 1 of 1
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should render correct icon for archived private channel 1`] = `
<div>
  <div
    class="ChannelsList"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-6-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-6-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-6-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Management
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="group_constrained"
                        name="group_constrained"
                        type="checkbox"
                      />
                      Group Sync
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="exclude_group_constrained"
                        name="exclude_group_constrained"
                        type="checkbox"
                      />
                      Manual Invites
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="access_control_policy_enforced"
                        name="access_control_policy_enforced"
                        type="checkbox"
                      />
                      Attribute Based
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1.5;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        >
          Management
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 40px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 12.06C14.79 12.35 14.64 12.67 14.5 13H9V11.5C9 11.22 9.22 11 9.5 11H14.5C14.78 11 15 11.22 15 11.5V12.06M21 9H3V3H21V9M19 5H5V7H19V5M13 19H6V10H4V21H13.03C13 20.9 13 20.8 13 20.7V19M23 17.3V20.8C23 21.4 22.4 22 21.7 22H16.2C15.6 22 15 21.4 15 20.7V17.2C15 16.6 15.6 16 16.2 16V14.5C16.2 13.1 17.6 12 19 12S21.8 13.1 21.8 14.5V16C22.4 16 23 16.6 23 17.3M20.5 14.5C20.5 13.7 19.8 13.2 19 13.2S17.5 13.7 17.5 14.5V16H20.5V14.5Z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                Archived Private
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/archived-private"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 1 of 1
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should render correct icon for archived public channel 1`] = `
<div>
  <div
    class="ChannelsList"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-5-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-5-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-5-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Channels
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="public"
                        name="public"
                        type="checkbox"
                      />
                      Public
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="private"
                        name="private"
                        type="checkbox"
                      />
                      Private
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="deleted"
                        name="deleted"
                        type="checkbox"
                      />
                      Archived
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Management
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="group_constrained"
                        name="group_constrained"
                        type="checkbox"
                      />
                      Group Sync
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="exclude_group_constrained"
                        name="exclude_group_constrained"
                        type="checkbox"
                      />
                      Manual Invites
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="access_control_policy_enforced"
                        name="access_control_policy_enforced"
                        type="checkbox"
                      />
                      Attribute Based
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 4;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 1.5;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
        >
          Management
        </div>
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        style="min-height: 40px;"
      >
        <div
          class="DataGrid_row"
        >
          <div
            class="DataGrid_cell"
            style="flex-grow: 4;"
          >
            <span
              class="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <svg
                class="channel-icon"
                data-testid="DN-archive-icon"
                fill="currentColor"
                height="1em"
                version="1.1"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                />
              </svg>
              <span
                class="TeamList_channelDisplayName"
              >
                Archived Public
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="flex-grow: 1.5;"
          >
            <span
              class="group-description row-content"
            >
              teamDisplayName
            </span>
          </div>
          <div
            class="DataGrid_cell"
          >
            <span
              class="group-description adjusted row-content"
            >
              <span
                class="group-indicator channel-indicator channel-indicator--larger"
              >
                Manual Invites
              </span>
            </span>
          </div>
          <div
            class="DataGrid_cell"
            style="text-align: right;"
          >
            <span
              class="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <a
                href="/admin_console/user_management/channels/archived-public"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 1 of 1
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
